Adding about-us.html file and making changes to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <h1> Git Exercise </h1>
 
 <h2> Added this file for Exercie 9 master branch </h2>
+<p> Adding change to this file in feature branch </p>
 
 </body>
 </html>
