--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <h2> Added this file for Exercie 9 master branch </h2>
 <p> Adding change to this file in feature branch </p>
+<p> Adding change to this file in master branch </p>
 
 </body>
 </html>
